# RCStatus-RUST

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: arg_helpers.rs  lib.rs
core-functionality/: Cargo.toml
core-functionality/src/: common.rs  fetch.rs  forget.rs  init.rs  lib.rs  push.rs  status.rs
database/: Cargo.toml
database/migrations/2023-02-09-183733_create_configs/: up.sql
database/src/: functions.rs  models.rs  schema.rs
src/: cmd.rs  main.rs  models.rs
utils/: Cargo.toml
utils/src/: cmd.rs  error.rs  lib.rs
