[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv = { version = "0.15.0" }
utils = { path = "../utils" }


[dependencies.diesel]
version = "2.0.3"
features = ["sqlite"]
